fix: apps framework default url
