# internal/deployserverclient/models/components/regionselector.go
@@ -1,0 +1,22 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package components
+
+type RegionSelector struct {
+	ID   *string `json:"id,omitempty"`
+	Name *string `json:"name,omitempty"`
+}
+
+func (r *RegionSelector) GetID() *string {
+	if r == nil {
+		return nil
+	}
+	return r.ID
+}
+
+func (r *RegionSelector) GetName() *string {
+	if r == nil {
+		return nil
+	}
+	return r.Name
+}
