# internal/deployserverclient/models/components/v2chartaccountmetadata.go
@@ -1,0 +1,14 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package components
+
+type V2ChartAccountMetadata struct {
+	Default *string `json:"default,omitempty"`
+}
+
+func (v *V2ChartAccountMetadata) GetDefault() *string {
+	if v == nil {
+		return nil
+	}
+	return v.Default
+}
