# internal/deployserverclient/models/components/v2chartsegment.go
@@ -1,0 +1,61 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package components
+
+import (
+	"github.com/formancehq/fctl/internal/deployserverclient/internal/utils"
+)
+
+type V2ChartSegment struct {
+	DotMetadata          map[string]V2ChartAccountMetadata `json:".metadata,omitempty"`
+	DotPattern           *string                           `json:".pattern,omitempty"`
+	DotRules             *V2ChartAccountRules              `json:".rules,omitempty"`
+	DotSelf              *DotSelf                          `json:".self,omitempty"`
+	AdditionalProperties map[string]any                    `additionalProperties:"true" json:"-"`
+}
+
+func (v V2ChartSegment) MarshalJSON() ([]byte, error) {
+	return utils.MarshalJSON(v, "", false)
+}
+
+func (v *V2ChartSegment) UnmarshalJSON(data []byte) error {
+	if err := utils.UnmarshalJSON(data, &v, "", false, nil); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (v *V2ChartSegment) GetDotMetadata() map[string]V2ChartAccountMetadata {
+	if v == nil {
+		return nil
+	}
+	return v.DotMetadata
+}
+
+func (v *V2ChartSegment) GetDotPattern() *string {
+	if v == nil {
+		return nil
+	}
+	return v.DotPattern
+}
+
+func (v *V2ChartSegment) GetDotRules() *V2ChartAccountRules {
+	if v == nil {
+		return nil
+	}
+	return v.DotRules
+}
+
+func (v *V2ChartSegment) GetDotSelf() *DotSelf {
+	if v == nil {
+		return nil
+	}
+	return v.DotSelf
+}
+
+func (v *V2ChartSegment) GetAdditionalProperties() map[string]any {
+	if v == nil {
+		return nil
+	}
+	return v.AdditionalProperties
+}
