# internal/deployserverclient/models/components/v2transactiontemplate.go
@@ -1,0 +1,30 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package components
+
+type V2TransactionTemplate struct {
+	Description *string `json:"description,omitempty"`
+	Runtime     *string `json:"runtime,omitempty"`
+	Script      *string `json:"script,omitempty"`
+}
+
+func (v *V2TransactionTemplate) GetDescription() *string {
+	if v == nil {
+		return nil
+	}
+	return v.Description
+}
+
+func (v *V2TransactionTemplate) GetRuntime() *string {
+	if v == nil {
+		return nil
+	}
+	return v.Runtime
+}
+
+func (v *V2TransactionTemplate) GetScript() *string {
+	if v == nil {
+		return nil
+	}
+	return v.Script
+}
